03-protect-network-policies/assets/payments-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-db
  namespace: payments-ops
  labels:
    app: payments-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-db
  template:
    metadata:
      labels:
        app: payments-db
    spec:
      containers:
        - name: payments-db
          image: busybox:1.36
          command: ["sh", "-c", "sleep 3600"]
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: payments-db
  namespace: payments-ops
spec:
  selector:
    app: payments-db
  ports:
    - port: 5432
      targetPort: 5432
